Before create gallery
