# src/services/car_model_price_history.go
@@ -1,0 +1,47 @@
+package services
+
+import (
+	"GOLANG_CLEAN_WEB_API/src/api/dto"
+	"GOLANG_CLEAN_WEB_API/src/config"
+	"GOLANG_CLEAN_WEB_API/src/data/db"
+	"GOLANG_CLEAN_WEB_API/src/data/models"
+	"GOLANG_CLEAN_WEB_API/src/pkg/logging"
+	"context"
+)
+
+type CarModelPriceHistoryService struct {
+	base *BaseService[models.CarModelPriceHistory, dto.CreateCarModelPriceHistoryRequest, dto.UpdateCarModelPriceHistoryRequest, dto.CarModelPriceHistoryResponse]
+}
+
+func NewCarModelPriceHistoryService(cfg *config.Config) *CarModelPriceHistoryService {
+	return &CarModelPriceHistoryService{
+		base: &BaseService[models.CarModelPriceHistory, dto.CreateCarModelPriceHistoryRequest, dto.UpdateCarModelPriceHistoryRequest, dto.CarModelPriceHistoryResponse]{
+			Database: db.GetDb(),
+			Logger:   logging.NewLogger(cfg),
+		},
+	}
+
+}
+
+func (s *CarModelPriceHistoryService) Create(ctx context.Context, req *dto.CreateCarModelPriceHistoryRequest) (*dto.CarModelPriceHistoryResponse, error) {
+	return s.base.Create(ctx, req)
+
+}
+
+func (s *CarModelPriceHistoryService) Update(ctx context.Context, id int, req *dto.UpdateCarModelPriceHistoryRequest) (*dto.CarModelPriceHistoryResponse, error) {
+	return s.base.Update(ctx, req, id)
+
+}
+
+func (s *CarModelPriceHistoryService) Delete(ctx context.Context, id int) error {
+	return s.base.Delete(ctx, id)
+
+}
+
+func (s *CarModelPriceHistoryService) GetById(ctx context.Context, id int) (*dto.CarModelPriceHistoryResponse, error) {
+	return s.base.GetById(ctx, id)
+}
+func (s *CarModelPriceHistoryService) GetByFilter(ctx context.Context, req *dto.PaginationInputWithFilter) (*dto.PagedList[dto.CarModelPriceHistoryResponse], error) {
+
+	return s.base.GetByFilter(ctx, req)
+}
